test/functions/lydia/genericActualTypeArg3.chpl

writeln(Foo:string);

class Foo {
  type x;
}
